# kitchenkit

./: 01_recipes.md  02_recipes.md  03_recipes.md  README.md  pyproject.toml
examples/: async.py  async_template.py  microwave_needs_lock.py  microwave_with_lock.py  producer_consumer.py  sync.py  two_pots_only.py  two_pots_semaphore.py
src/kitchenkit/: __init__.py  async_prep.py  context.py  exceptions.py  leftovers.py  logging.py  pantry.py  prep.py
