[project]
name = "kitchenkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rodrigo Girão Serrão", email = "5621605+rodrigogiraoserrao@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
